# vakiomax-pyqt5

./: .gitignore  README.md  pyproject.toml  release.sh
src/main/icons/: icons.sh
src/main/python/: main.py
src/main/python/vakiomax_pyqt5/: connections.py  main.py  parselines.py  passwords.py  sample.py
src/tests/python/: sample_draws.json  sample_open_games.json  test_vakiomax4_pyqt5.py
tests/: test_vakiomax4_pyqt5.py
