[tool.poetry]
name = "vakiomax4-pyqt5"
version = "0.1.0"
description = ""
authors = ["Heikki Rauhala <heikki.rauhala@reaktor.fi>"]

[tool.poetry.dependencies]
python = "^3.7"
PyQt5 = "^5.14.2"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
