[tool.poetry]
name = "vakiomax4-pyqt5"
version = "0.1.0"
description = ""
authors = ["Heikki Rauhala <heikki.rauhala@reaktor.fi>"]

[tool.poetry.dependencies]
python = "~3.7"
PyQt5 = "^5.15.2"
requests = "^2.23.0"
fbs = "^0.9.0"
keyring = "^23.11.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
